Enhance SEO and social sharing metadata in index.html
Added SEO meta tags, favicon, and OpenGraph/Twitter metadata to enhance visibility and sharing.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Urdu Assignment maker</title>
+    <!-- SEO Meta -->
+<title>Urdu Assignment Maker (PDF) | Free Online Urdu Editor</title>
+<meta name="description" content="Free Urdu assignment maker and editor. Write assignments online in Urdu and generate a clean PDF instantly. Supports Nastaliq font and proper formatting." />
+<meta name="robots" content="index, follow" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://assignment-six-sable.vercel.app/" />
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+<!-- OpenGraph (WhatsApp / Facebook) -->
+<meta property="og:title" content="Urdu Assignment Maker (PDF) - Free Online Urdu Editor" />
+<meta property="og:description" content="Write Urdu assignments online and export PDF instantly. Nastaliq font support with clean formatting." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://assignment-six-sable.vercel.app/" />
+<meta property="og:site_name" content="Urdu Assignment Maker" />
+
+<!-- Twitter Preview -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Urdu Assignment Maker (PDF) - Free Online Urdu Editor" />
+<meta name="twitter:description" content="Write Urdu assignments online and export PDF instantly with clean formatting." />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
